Fixed footer to stay at the bottom of page. Wrapped footer tag around jsx in Footer.jsx component.

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,16 @@
-footer {
+/* footer {
   margin-top: 80px;
   padding: 20px;
   text-align: center;
+} */
+
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 20px;
 }
+
