--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -40,3 +40,14 @@
 .navLink:hover {
   background-color: #008183;
 }
+
+
+/* .loginMain {
+  background: url("https://images.unsplash.com/photo-1532713031318-db2d14e4b3e1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=375&q=80") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding-top: 120px;
+  padding-bottom: 120px;
+} */
